feat: jpa + cmd